trunk/Archive2/8c/a48764ea5c9bbf/output
main.cpp: In function 'int main()':
main.cpp:72:21: error: invalid types 'int[int]' for array subscript
     std::cout << x[0] << std::endl;
                     ^
